migrate ESP.ino to ESP.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ lib_deps =
     ESP Async Webserver@1.2.2
     Task
     Brzo I2C
+    ESP8266WiFi
     ESP8266TrueRandom
 ;monitor_port = /dev/cu.SLAB_USBtoUART
 ;upload_port = /dev/cu.usbserial-A50285BI
