--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@ default_envs = unified
 
 [env:unified]
 platform = espressif8266
-board = esp07
+board = nodemcu
 framework = arduino
-upload_port = 192.168.2.55
-upload_protocol = espota
-upload_flags = --auth=hansilein
-monitor_port = /dev/cu.wchusbserial1420
+#upload_port = 192.168.2.55
+#upload_protocol = espota
+#upload_flags = --auth=hansilein
+#monitor_port = /dev/cu.wchusbserial1420
 monitor_speed = 115200
 build_flags =
     -Wl,-Teagle.flash.4m3m.ld
