--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ notes.txt
 .vscode/*.db
 misc/test.html
 .vscode/.browse.c_cpp.db*
+data/index.html.gz
 data/esp.index.html.gz
 data/esp.index.html.gz.md5
 data/changelog
@@ -19,3 +20,5 @@ data/firmware.dc
 data/firmware.dc.md5
 .pio
 build
+.clang_complete
+.gcc-flags.json
